# human_hand

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: display.launch  display.launch~  display.rviz  display_calibrated.rviz  my_rviz.rviz  two_gloves.launch  two_gloves.rviz  two_gloves_calibrated.rviz  twogloves.launch  twogloves.rviz  twohands.launch  upload.launch  upload_remapped.launch
meshes/: LICENSE  dito.stl  palmo.stl  thumb_base.stl
model/: L1.urdf.xacro  L1right.yaml  L2.urdf.xacro  L2left.yaml  L2right.yaml  L3.urdf.xacro  L3left.yaml  L3right.yaml  P1.urdf.xacro  P2.mapping.xacro  P2.mapping.yaml  P2.urdf.xacro  P3.urdf.xacro  P3l.mapping.xacro  P3l.mapping.yaml  P3r.mapping.xacro  P3r.mapping.yaml  glove_markers.urdf.xacro  human_hand.urdf.xacro  materials.urdf.xacro  pisa_hand.urdf.xacro  properties.yaml  tactile_markers.urdf.xacro  taxel.yaml  todo-L1left-L1right.txt
model/meshes/: LICENSE  forearm.stl  index_distal.stl  index_middle.stl  index_proximal.stl  little_distal.stl  little_middle.stl  little_proximal.stl  middle_distal.stl  middle_middle.stl  middle_proximal.stl  palm.stl  ring_distal.stl  ring_middle.stl  ring_proximal.stl  thumb_distal.stl  thumb_middle.stl  thumb_proximal.stl
model/meshes/taxels/: idd.stl  idi.stl  idm.stl  ido.stl  imi.stl  imm.stl  imo.stl  ip.stl  ipi.stl  ldd.stl  ldi.stl  ldm.stl  ldo.stl  lmi.stl  lmm.stl  lmo.stl  lp.stl  lpo.stl  mdd.stl  mdi.stl  mdm.stl  mdo.stl  mmi.stl  mmm.stl  mmo.stl  mp.stl  rdd.stl  rdi.stl  rdm.stl  rdo.stl  rmi.stl  rmm.stl  rmo.stl  rp.stl  tdd.stl  tdi.stl  tdm.stl  tdo.stl  tmi.stl  tmm.stl  (+1 more)
model/meshes/taxels/L1/: pcip.stl  pcmd.stl  pco.stl  pdi.stl  pdii.stl  pdm.stl  pdr.stl  ptid.stl  ptid2.stl  ptip.stl  ptip2.stl  ptmd.stl  ptmp.stl  ptmp2.stl  ptod.stl  ptop.stl  tpm.stl
model/meshes/taxels/L2/: pcid.stl  pcim.stl  pcip.stl  pcmd.stl  pcmp.stl  pco.stl  pdi.stl  pdii.stl  pdl.stl  pdlo.stl  pdm.stl  pdr.stl  pi.stl  ptid.stl  ptid2.stl  ptip.stl  ptip2.stl  ptmd.stl  ptmd2.stl  ptmp2.stl  ptod.stl  ptop.stl  tpi.stl
model/meshes/taxels/L3/: pcid.stl  pcim.stl  pcip.stl  pcmd.stl  pcmp.stl  pdi.stl  pdii.stl  pdl.stl  pdlo.stl  pdm.stl  pdr.stl  ptid.stl  ptid2.stl  ptip.stl  ptip2.stl  ptmd.stl  ptmd2.stl  ptmp.stl  ptmp2.stl  ptod.stl  ptop.stl  tpo.stl
robot/: human_hand.urdf.xacro  human_hand_simple.urdf.xacro  pisa_hand_simple.urdf.xacro  twohands.urdf.xacro
robots/: human_hand.urdf.xacro  twohands.urdf.xacro
