<?xml version="1.0"?>
<package>
  <name>human_hand_description</name>
  <version>0.0.1</version>
  <description>The human_hand_description package</description>

  <maintainer email="gwalck@techfak.uni-bielefeld.de">Guillaume Walck</maintainer>
  <license>NO REDISTRIBUTION ACCEPTED</license>
  
  <author>Guillaume Walck</author>
  <author>Carlos Rosales</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
